[package]
name = "rust-keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.57", features = ["derive"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
env_logger = "0.11.10"
evdev = "0.12.2"
log = "0.4.29"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
ksni = { version = "0.3.4" }
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8.2"
